--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@ section {
     </style>
 </head>
 <main>
-  <h1>URL Shortener</h1>
+  <h1>URL Shorteners</h1>
   <form id="post-form">
     {% csrf_token %}
   <input type="text" name="link" id="link" placeholder="Enter URL here">
